# KarboTickerApplet

./: CMakeLists.txt  KarboTickerApplet.server  LICENSE  MarketsAPI.cpp  MarketsAPI.h  README.md  karbo-markets-applet.cbp  main.cpp
